Some quick quality changes

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -25,8 +25,8 @@
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:57:08.741821Z",
-     "start_time": "2025-07-14T12:57:08.733763Z"
+     "end_time": "2025-07-14T12:59:28.879314Z",
+     "start_time": "2025-07-14T12:59:28.874733Z"
     }
    },
    "source": [
@@ -119,7 +119,7 @@
      ]
     }
    ],
-   "execution_count": 53
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -132,12 +132,7 @@
    "id": "dabf5f01d8e6a670"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-14T12:57:09.899396Z",
-     "start_time": "2025-07-14T12:57:09.868698Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Load datasets\n",
@@ -164,19 +159,8 @@
     "print(\"hello1\")  # print hello 1 as a sanity check"
    ],
    "id": "598b33092ab85352",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 5135 rows from dataset CSV\n",
-      "Before deduplication: 5135 total cases\n",
-      "4501 duplicates removed (now 634 unique PMIDs)\n",
-      "hello1\n"
-     ]
-    }
-   ],
-   "execution_count": 54
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -189,12 +173,7 @@
    "id": "2a1755b2eb294368"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-14T12:57:11.263659Z",
-     "start_time": "2025-07-14T12:57:11.199905Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Prepare phenopacket JSON cache, skip logic, and cap how many PDFs to process\n",
@@ -234,18 +213,8 @@
     "print(\"hello2\")  # print hello 2 as a sanity check"
    ],
    "id": "8118b55fc2741c2b",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialized empty phenopacket cache\n",
-      "Discovered 7969 ground-truth JSON files\n",
-      "hello2\n"
-     ]
-    }
-   ],
-   "execution_count": 55
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -258,12 +227,7 @@
    "id": "9a9faff43b491b26"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-14T12:57:12.444038Z",
-     "start_time": "2025-07-14T12:57:12.436515Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Setup conversion for input material to LLM-compatible txt\n",
@@ -317,17 +281,8 @@
     "print(\"hello3\")  # print hello 3 as a sanity check"
    ],
    "id": "231c1c375a6ec410",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialized empty text cache\n",
-      "hello3\n"
-     ]
-    }
-   ],
-   "execution_count": 56
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -346,14 +301,7 @@
   {
    "cell_type": "code",
    "id": "235eaff7-4f21-4a21-81bf-e97236ca26d1",
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
-    "ExecuteTime": {
-     "start_time": "2025-07-14T12:57:13.670751Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Load Clinical PDFs and Ground-Truth Phenopackets (with full skip‐tracking & deduplication)\n",
     "# Watch for any \"bad\" PDFs like \"scripts/data/tmp/phenopacket_store/pmid_pdfs/PMID_32325141.pdf\", which made `load_clinical_pdf` raise a ``ConversionError causing the whole cell to fail\n",
@@ -361,61 +309,102 @@
     "import warnings\n",
     "from google.protobuf.json_format import ParseDict, ParseError\n",
     "from phenopackets import Phenopacket as ProtoPhenopacket\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "# Now iterate over rows, should lookup only once\n",
     "list_input_texts    = []\n",
     "list_truth_packets  = []\n",
     "list_patient_ids    = []\n",
     "\n",
-    "for case in dataframe_cases.itertuples(index=False):\n",
+    "# iterate with a progress bar\n",
+    "for case in tqdm(dataframe_cases.itertuples(index=False),\n",
+    "                 total=len(dataframe_cases),\n",
+    "                 desc=\"Loading PDFs\"):\n",
     "    pmid_value = case.pmid\n",
     "    pdf_path   = case.input\n",
     "    truth_path = case.truth\n",
     "\n",
-    "    # 1) Compute MD5 of the PDF to detect reruns\n",
+    "    # 1) compute MD5 of the PDF to detect reruns\n",
     "    try:\n",
     "        with open(pdf_path, \"rb\") as f:\n",
     "            pdf_bytes = f.read()\n",
     "        pdf_hash = hashlib.md5(pdf_bytes).hexdigest()\n",
     "    except Exception as e:\n",
-    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": f\"I/O error computing hash: {e}\"})\n",
+    "        skipped_pdfs.append({\n",
+    "            \"pmid\":  pmid_value,\n",
+    "            \"pdf\":   pdf_path,\n",
+    "            \"reason\": f\"I/O error computing hash: {e}\"\n",
+    "        })\n",
     "        continue\n",
     "\n",
-    "    # 2) Skip if already processed\n",
+    "    # 2) skip if already in cache\n",
     "    if pdf_hash in existing_hashes:\n",
-    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": \"already in cache\"})\n",
+    "        skipped_pdfs.append({\n",
+    "            \"pmid\":  pmid_value,\n",
+    "            \"pdf\":   pdf_path,\n",
+    "            \"reason\": \"already in cache\"\n",
+    "        })\n",
     "        continue\n",
     "\n",
-    "    # 3) Enforce MAX_LOAD\n",
+    "    # 3) enforce MAX_LOAD\n",
     "    if loaded_count >= MAX_LOAD:\n",
-    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": \"max load reached\"})\n",
+    "        skipped_pdfs.append({\n",
+    "            \"pmid\":  pmid_value,\n",
+    "            \"pdf\":   pdf_path,\n",
+    "            \"reason\": \"max load reached\"\n",
+    "        })\n",
     "        continue\n",
     "\n",
-    "    # 4) Convert PDF to text\n",
+    "    # 4) convert PDF to text\n",
     "    try:\n",
     "        clinical_text = load_clinical_pdf(pdf_path)\n",
     "    except ConversionError as e:\n",
-    "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": f\"conversion error: {e}\"})\n",
+    "        skipped_pdfs.append({\n",
+    "            \"pmid\":  pmid_value,\n",
+    "            \"pdf\":   pdf_path,\n",
+    "            \"reason\": f\"conversion error: {e}\"\n",
+    "        })\n",
     "        continue\n",
     "\n",
-    "    # 5) Load raw JSON and validate with ignore_unknown_fields\n",
+    "    # 5) guard that the truth JSON exists\n",
+    "    if not os.path.isfile(truth_path):\n",
+    "        skipped_pdfs.append({\n",
+    "            \"pmid\":  pmid_value,\n",
+    "            \"truth\": truth_path,\n",
+    "            \"reason\": \"truth JSON missing\"\n",
+    "        })\n",
+    "        continue\n",
+    "\n",
+    "    # 6) load raw JSON and validate via protobuf (ignoring unknown fields)\n",
     "    try:\n",
-    "        raw_true_packet = json.load(open(truth_path, \"r\", encoding=\"utf-8\"))\n",
+    "        with open(truth_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "            raw_true_packet = json.load(f)\n",
     "        proto = ProtoPhenopacket()\n",
     "        ParseDict(raw_true_packet, proto, ignore_unknown_fields=True)\n",
     "    except (ParseError, json.JSONDecodeError, FileNotFoundError) as e:\n",
-    "        skipped_pdfs.append({\"pmid\": pmid_value, \"truth\": truth_path, \"reason\": f\"schema parse error: {e}\"})\n",
+    "        skipped_pdfs.append({\n",
+    "            \"pmid\":  pmid_value,\n",
+    "            \"truth\": truth_path,\n",
+    "            \"reason\": f\"schema parse error: {e}\"\n",
+    "        })\n",
     "        continue\n",
     "\n",
-    "    # 6) Wrap in util Phenopacket to ensure phenotypicFeatures exists\n",
+    "    # 7) wrap in our util Phenopacket to ensure phenotypicFeatures key\n",
     "    try:\n",
     "        truth_packet = Phenopacket(raw_true_packet)\n",
     "    except InvalidPhenopacketError as e:\n",
-    "        skipped_pdfs.append({\"pmid\": pmid_value, \"truth\": truth_path, \"reason\": f\"phenopacket invalid: {e}\"})\n",
+    "        skipped_pdfs.append({\n",
+    "            \"pmid\":  pmid_value,\n",
+    "            \"truth\": truth_path,\n",
+    "            \"reason\": f\"phenopacket invalid: {e}\"\n",
+    "        })\n",
     "        continue\n",
     "\n",
-    "    # 7) Record in cache & lists\n",
-    "    phenopacket_cache[str(pmid_value)] = {\"hash\": pdf_hash, \"json\": raw_true_packet}\n",
+    "    # 8) record into cache & lists\n",
+    "    phenopacket_cache[str(pmid_value)] = {\n",
+    "        \"hash\": pdf_hash,\n",
+    "        \"json\": raw_true_packet\n",
+    "    }\n",
     "    existing_hashes.add(pdf_hash)\n",
     "\n",
     "    list_input_texts.append(clinical_text)\n",
@@ -423,10 +412,24 @@
     "    list_patient_ids.append(truth_packet.to_json()[\"subject\"][\"id\"])\n",
     "\n",
     "    loaded_count += 1\n",
-    "    print(f\"Loaded {loaded_count} new cases, skipped {len(skipped_pdfs)} so far\")\n",
     "\n",
+    "    # periodic cache flush\n",
+    "    if loaded_count % 20 == 0:\n",
+    "        with open(phenopacket_cache_path, \"w\") as cf:\n",
+    "            json.dump(phenopacket_cache, cf, indent=2)\n",
+    "\n",
+    "# final consistency check\n",
     "assert len(list_input_texts) == len(list_truth_packets) == len(list_patient_ids)\n",
     "print(\"Loaded %d clinical texts and %d ground-truth packets for %d unique patients\" % (len(list_input_texts), len(list_truth_packets), len(list_patient_ids)))\n",
+    "\n",
+    "# final cache dump\n",
+    "with open(phenopacket_cache_path, \"w\") as cf:\n",
+    "    json.dump(phenopacket_cache, cf, indent=2)\n",
+    "print(f\"Saved phenopacket cache with {len(phenopacket_cache)} entries\")\n",
+    "\n",
+    "# inspect all skips\n",
+    "skipped_df = pd.DataFrame(skipped_pdfs)\n",
+    "display(skipped_df)\n",
     "\n",
     "print(\"hello4\")  # print hello 4 as a sanity check"
    ],
