Refactoring the notebook

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -25,8 +25,8 @@
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:57:08.741821Z",
-     "start_time": "2025-07-14T12:57:08.733763Z"
+     "end_time": "2025-07-15T14:41:45.234452Z",
+     "start_time": "2025-07-15T14:41:44.995168Z"
     }
    },
    "source": [
@@ -42,58 +42,84 @@
     "# from .autonotebook import tqdm as notebook_tqdm\n",
     "\n",
     "# Make sure our utils folder is on PYTHONPATH\n",
-    "project_root = os.path.abspath(\"..\")\n",
-    "utils_folder   = os.path.join(project_root, \"notebooks\", \"utils\")\n",
-    "if not os.path.isdir(utils_folder):\n",
-    "    raise FileNotFoundError(\"Expected utils under %s\" % utils_folder)\n",
-    "sys.path.insert(0, project_root)\n",
+    "project_root        = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
+    "src_folder          = os.path.join(project_root, \"src\")\n",
+    "utils_folder        = os.path.join(project_root, \"notebooks\", \"utils\")\n",
+    "\n",
+    "print(\"Project Start:       %s\" % project_root)\n",
+    "print(\"Source Folder:       %s\" % src_folder)\n",
+    "print(\"Utilities Folder:    %s\" % utils_folder)\n",
+    "\n",
+    "for path in (src_folder, utils_folder):\n",
+    "    if not os.path.isdir(path):\n",
+    "        raise FileNotFoundError(f\"Expected folder on PYTHOPATH : {path}\")\n",
+    "    if path not in sys.path:\n",
+    "        sys.path.insert(0, path)\n",
+    "\n",
+    "print(\"PYTHONPATH patched with:\", src_folder, utils_folder)\n",
     "\n",
     "try:\n",
-    "    from notebooks.utils.phenopacket import Phenopacket\n",
-    "    from notebooks.utils.report import Report\n",
-    "    from notebooks.utils.evaluation import PhenotypeEvaluator\n",
+    "    from phenopacket import Phenopacket\n",
+    "    from report import Report\n",
+    "    from evaluation import PhenotypeEvaluator\n",
     "except ImportError as e:\n",
     "    raise ImportError(f\"Could not import project utils: {e}\")\n",
     "\n",
-    "\n",
     "# define all key paths\n",
-    "pdf_input_directory = os.path.join(project_root, \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmid_pdfs\")            # scripts/data/tmp/phenopacket_store/pmid_pdfs/\n",
-    "ground_truth_notebooks_directory = os.path.join(project_root, \"scripts\",\"data\",\"tmp\", \"phenopacket_store\",\"notebooks\")  # scripts/data/tmp/phenopacket_store/notebooks/\n",
-    "\n",
-    "# CSV location, which is generated from \"python -m scripts.create_phenopacket_dataset \"scripts/data/tmp/phenopacket_store/pmid_pdfs\" \"scripts/data/tmp/phenopacket_store/notebooks\" \"scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\" --recursive_ground_truth_dir True\"\n",
-    "dataset_csv_path = os.path.join(project_root, \"scripts\", \"data\", \"tmp\", \"PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\")\n",
+    "pdf_input_directory                 = os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmid_pdfs\")            # scripts/data/tmp/phenopacket_store/pmid_pdfs/\n",
+    "ground_truth_notebooks_directory    = os.path.join(src_folder, \"P5\", \"scripts\", \"data\",\"tmp\", \"phenopacket_store\",\"notebooks\")              # scripts/data/tmp/phenopacket_store/notebooks/\n",
+    "dataset_csv_path                    = os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\")\n",
     "\n",
     "# All experimental outputs go under here\n",
-    "experimental_data_root = os.path.join(project_root, \"experimental-data\")\n",
-    "llm_output_directory = os.path.join(experimental_data_root, \"llm_output_dir\")                                           # intermediate .txt + raw JSON from LLM\n",
-    "validated_jsons_directory = os.path.join(experimental_data_root, \"validated_jsons\")                                     # validated_jsons, the final validated LLM phenopackets\n",
-    "evaluation_report_output_path = os.path.join(project_root, \"reports\", \"first_report.json\")                              # the evaluation metrics report\n",
+    "experimental_data_root              = os.path.join(project_root, \"experimental-data\")\n",
+    "llm_output_directory                = os.path.join(experimental_data_root, \"llm_output_dir\")                                                # intermediate .txt + raw JSON from LLM\n",
+    "validated_jsons_directory           = os.path.join(experimental_data_root, \"validated_jsons\")                                               # validated_jsons, the final validated LLM phenopackets\n",
+    "evaluation_report_output_path       = os.path.join(project_root, \"reports\", \"first_report.json\")                                            # the evaluation metrics report\n",
     "\n",
     "# Create any missing output folders\n",
+    "os.makedirs(pdf_input_directory, exist_ok=True)\n",
+    "os.makedirs(ground_truth_notebooks_directory, exist_ok=True)\n",
     "os.makedirs(os.path.dirname(dataset_csv_path), exist_ok=True)\n",
     "os.makedirs(llm_output_directory, exist_ok=True)\n",
     "os.makedirs(validated_jsons_directory, exist_ok=True)\n",
     "os.makedirs(os.path.dirname(evaluation_report_output_path), exist_ok=True)\n",
     "\n",
     "\n",
+    "# Pull raw git data into scripts/data/tmp\n",
+    "subprocess.run([\n",
+    "    sys.executable, \"-m\", \"P5.scripts.pull_git_files\",\n",
+    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\")\n",
+    "], check=True)\n",
+    "\n",
+    "# Create a pickle of all PMIDs from the pulled notebooks\n",
+    "subprocess.run([\n",
+    "    sys.executable, \"-m\", \"P5.scripts.create_pmid_pkl\",\n",
+    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"notebooks\"),\n",
+    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"pmid_list.pkl\")\n",
+    "], check=True)\n",
+    "\n",
+    "# Download all PDFs for those PMIDs\n",
+    "subprocess.run([\n",
+    "    sys.executable, \"-m\", \"P5.scripts.PMID_downloader\",\n",
+    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"pmid_list.pkl\"),\n",
+    "    pdf_input_directory\n",
+    "], check=True)\n",
+    "\n",
     "# If dataset CSV does not exist, run the CLI to generate it\n",
     "if not os.path.isfile(dataset_csv_path):\n",
-    "    if not os.path.isdir(pdf_input_directory):\n",
-    "        raise FileNotFoundError(\n",
-    "            \"PDF input directory not found: %s\" % pdf_input_directory\n",
-    "        )\n",
-    "    if not os.path.isdir(ground_truth_notebooks_directory):\n",
-    "        raise FileNotFoundError(\n",
-    "            \"Ground truth notebooks directory not found: %s\" % ground_truth_notebooks_directory)\n",
-    "\n",
     "    subprocess.run([\n",
-    "        sys.executable, \"-m\", \"scripts.create_phenopacket_dataset\",\n",
+    "        sys.executable, \"-m\", \"P5.scripts.create_phenopacket_dataset\",\n",
     "        pdf_input_directory,\n",
     "        ground_truth_notebooks_directory,\n",
     "        dataset_csv_path,\n",
     "        \"--recursive_ground_truth_dir\", \"True\"\n",
     "    ], check=True)\n",
     "    print(f\"Created dataset CSV at {dataset_csv_path}\")\n",
+    "\n",
+    "    if not os.path.isdir(pdf_input_directory):\n",
+    "        raise FileNotFoundError(\"PDF input directory not found: %s\" % pdf_input_directory)\n",
+    "    if not os.path.isdir(ground_truth_notebooks_directory):\n",
+    "        raise FileNotFoundError(\"Ground truth notebooks directory not found: %s\" % ground_truth_notebooks_directory)\n",
     "\n",
     "print(\"PDF inputs folder:       %s\" % pdf_input_directory)\n",
     "print(\"Ground truth folder:     %s\" % ground_truth_notebooks_directory)\n",
@@ -109,9 +135,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PDF inputs folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/pmid_pdfs\n",
-      "Ground truth folder:     /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
-      "Dataset CSV path:        /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\n",
+      "Project Start:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5\n",
+      "Source Folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src\n",
+      "Utilities Folder:    /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils\n",
+      "PYTHONPATH patched with: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils\n",
+      "Created dataset CSV at /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\n",
+      "PDF inputs folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/pmid_pdfs\n",
+      "Ground truth folder:     /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
+      "Dataset CSV path:        /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\n",
       "LLM outputs folder:      /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/llm_output_dir\n",
       "Validated JSONs folder:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/validated_jsons\n",
       "Evaluation report path:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/reports/first_report.json\n",
@@ -119,7 +150,7 @@
      ]
     }
    ],
-   "execution_count": 53
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -134,8 +165,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-14T12:57:09.899396Z",
-     "start_time": "2025-07-14T12:57:09.868698Z"
+     "end_time": "2025-07-15T14:42:54.155238Z",
+     "start_time": "2025-07-15T14:42:54.145043Z"
     }
    },
    "cell_type": "code",
@@ -169,14 +200,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 5135 rows from dataset CSV\n",
-      "Before deduplication: 5135 total cases\n",
-      "4501 duplicates removed (now 634 unique PMIDs)\n",
+      "Loaded 0 rows from dataset CSV\n",
+      "Before deduplication: 0 total cases\n",
+      "0 duplicates removed (now 0 unique PMIDs)\n",
       "hello1\n"
      ]
     }
    ],
-   "execution_count": 54
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -189,12 +220,7 @@
    "id": "2a1755b2eb294368"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-14T12:57:11.263659Z",
-     "start_time": "2025-07-14T12:57:11.199905Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Prepare phenopacket JSON cache, skip logic, and cap how many PDFs to process\n",
@@ -234,18 +260,8 @@
     "print(\"hello2\")  # print hello 2 as a sanity check"
    ],
    "id": "8118b55fc2741c2b",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialized empty phenopacket cache\n",
-      "Discovered 7969 ground-truth JSON files\n",
-      "hello2\n"
-     ]
-    }
-   ],
-   "execution_count": 55
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -258,12 +274,7 @@
    "id": "9a9faff43b491b26"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-14T12:57:12.444038Z",
-     "start_time": "2025-07-14T12:57:12.436515Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Setup conversion for input material to LLM-compatible txt\n",
@@ -317,17 +328,8 @@
     "print(\"hello3\")  # print hello 3 as a sanity check"
    ],
    "id": "231c1c375a6ec410",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialized empty text cache\n",
-      "hello3\n"
-     ]
-    }
-   ],
-   "execution_count": 56
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -349,9 +351,6 @@
    "metadata": {
     "jupyter": {
      "is_executing": true
-    },
-    "ExecuteTime": {
-     "start_time": "2025-07-14T12:57:13.670751Z"
     }
    },
    "source": [
