Actually use the `scripts` modules

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -25,8 +25,8 @@
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T14:41:45.234452Z",
-     "start_time": "2025-07-15T14:41:44.995168Z"
+     "end_time": "2025-07-15T14:59:13.300638Z",
+     "start_time": "2025-07-15T14:59:13.139109Z"
     }
    },
    "source": [
@@ -85,27 +85,32 @@
     "os.makedirs(os.path.dirname(evaluation_report_output_path), exist_ok=True)\n",
     "\n",
     "\n",
-    "# Pull raw git data into scripts/data/tmp\n",
+    "# 1. Clone the \"phenopacket-store\" GitHub repo into scripts/data/tmp/phenopacket_store\n",
     "subprocess.run([\n",
     "    sys.executable, \"-m\", \"P5.scripts.pull_git_files\",\n",
-    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\")\n",
+    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\"),\n",
+    "    \"https://github.com/monarch-initiative/phenopacket-store\",\n",
+    "    \"notebooks\",\n",
+    "    \"--depth\", \"1\",\n",
     "], check=True)\n",
     "\n",
-    "# Create a pickle of all PMIDs from the pulled notebooks\n",
+    "# 2. Scan the just-pulled notebooks for PMID_##### files\n",
     "subprocess.run([\n",
     "    sys.executable, \"-m\", \"P5.scripts.create_pmid_pkl\",\n",
     "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"notebooks\"),\n",
-    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"pmid_list.pkl\")\n",
+    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmids.pkl\"),\n",
+    "    \"--recursive\",\n",
     "], check=True)\n",
     "\n",
-    "# Download all PDFs for those PMIDs\n",
+    "# 3. Download *all* PDFs for those PMIDs (0 = unlimited)\n",
     "subprocess.run([\n",
-    "    sys.executable, \"-m\", \"P5.scripts.PMID_downloader\",\n",
-    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"pmid_list.pkl\"),\n",
-    "    pdf_input_directory\n",
+    "    sys.executable, \"-m\", \"P5.scripts.pmid_downloader\",\n",
+    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmids.pkl\"),\n",
+    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmid_pdfs\"),\n",
+    "    \"0\",\n",
     "], check=True)\n",
     "\n",
-    "# If dataset CSV does not exist, run the CLI to generate it\n",
+    "# 4. Finally, build THE CSV mapping PDFs to the ground-truth JSONs\n",
     "if not os.path.isfile(dataset_csv_path):\n",
     "    subprocess.run([\n",
     "        sys.executable, \"-m\", \"P5.scripts.create_phenopacket_dataset\",\n",
@@ -138,19 +143,34 @@
       "Project Start:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5\n",
       "Source Folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src\n",
       "Utilities Folder:    /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils\n",
-      "PYTHONPATH patched with: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils\n",
-      "Created dataset CSV at /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\n",
-      "PDF inputs folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/pmid_pdfs\n",
-      "Ground truth folder:     /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
-      "Dataset CSV path:        /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\n",
-      "LLM outputs folder:      /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/llm_output_dir\n",
-      "Validated JSONs folder:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/validated_jsons\n",
-      "Evaluation report path:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/reports/first_report.json\n",
-      "hello0\n"
+      "PYTHONPATH patched with: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Usage: python -m P5.scripts.pull_git_files [OPTIONS] OUT_DIR REPO\n",
+      "                                           FILES_TO_COPY_DIR\n",
+      "Try 'python -m P5.scripts.pull_git_files --help' for help.\n",
+      "\n",
+      "Error: No such option: --depth\n"
+     ]
+    },
+    {
+     "ename": "CalledProcessError",
+     "evalue": "Command '['/Users/varenya/miniconda3/envs/p5/bin/python', '-m', 'P5.scripts.pull_git_files', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store', 'https://github.com/monarch-initiative/phenopacket-store', 'notebooks', '--depth', '1']' returned non-zero exit status 2.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mCalledProcessError\u001B[39m                        Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[19]\u001B[39m\u001B[32m, line 57\u001B[39m\n\u001B[32m     53\u001B[39m os.makedirs(os.path.dirname(evaluation_report_output_path), exist_ok=\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[32m     56\u001B[39m \u001B[38;5;66;03m# 1. Clone the \"phenopacket-store\" GitHub repo into scripts/data/tmp/phenopacket_store\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m57\u001B[39m \u001B[43msubprocess\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrun\u001B[49m\u001B[43m(\u001B[49m\u001B[43m[\u001B[49m\n\u001B[32m     58\u001B[39m \u001B[43m    \u001B[49m\u001B[43msys\u001B[49m\u001B[43m.\u001B[49m\u001B[43mexecutable\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43m-m\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mP5.scripts.pull_git_files\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     59\u001B[39m \u001B[43m    \u001B[49m\u001B[43mos\u001B[49m\u001B[43m.\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m.\u001B[49m\u001B[43mjoin\u001B[49m\u001B[43m(\u001B[49m\u001B[43msrc_folder\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mP5\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mscripts\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mdata\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mtmp\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mphenopacket_store\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     60\u001B[39m \u001B[43m    \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mhttps://github.com/monarch-initiative/phenopacket-store\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     61\u001B[39m \u001B[43m    \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mnotebooks\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     62\u001B[39m \u001B[43m    \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43m--depth\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43m1\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     63\u001B[39m \u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcheck\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n\u001B[32m     65\u001B[39m \u001B[38;5;66;03m# 2. Scan the just-pulled notebooks for PMID_##### files\u001B[39;00m\n\u001B[32m     66\u001B[39m subprocess.run([\n\u001B[32m     67\u001B[39m     sys.executable, \u001B[33m\"\u001B[39m\u001B[33m-m\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mP5.scripts.create_pmid_pkl\u001B[39m\u001B[33m\"\u001B[39m,\n\u001B[32m     68\u001B[39m     os.path.join(src_folder, \u001B[33m\"\u001B[39m\u001B[33mP5\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mscripts\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mdata\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mtmp\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mphenopacket_store\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mnotebooks\u001B[39m\u001B[33m\"\u001B[39m),\n\u001B[32m     69\u001B[39m     os.path.join(src_folder, \u001B[33m\"\u001B[39m\u001B[33mP5\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mscripts\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mdata\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mtmp\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mphenopacket_store\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mpmids.pkl\u001B[39m\u001B[33m\"\u001B[39m),\n\u001B[32m     70\u001B[39m     \u001B[33m\"\u001B[39m\u001B[33m--recursive\u001B[39m\u001B[33m\"\u001B[39m,\n\u001B[32m     71\u001B[39m ], check=\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/miniconda3/envs/p5/lib/python3.13/subprocess.py:577\u001B[39m, in \u001B[36mrun\u001B[39m\u001B[34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001B[39m\n\u001B[32m    575\u001B[39m     retcode = process.poll()\n\u001B[32m    576\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m check \u001B[38;5;129;01mand\u001B[39;00m retcode:\n\u001B[32m--> \u001B[39m\u001B[32m577\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m CalledProcessError(retcode, process.args,\n\u001B[32m    578\u001B[39m                                  output=stdout, stderr=stderr)\n\u001B[32m    579\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m CompletedProcess(process.args, retcode, stdout, stderr)\n",
+      "\u001B[31mCalledProcessError\u001B[39m: Command '['/Users/varenya/miniconda3/envs/p5/bin/python', '-m', 'P5.scripts.pull_git_files', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store', 'https://github.com/monarch-initiative/phenopacket-store', 'notebooks', '--depth', '1']' returned non-zero exit status 2."
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -163,12 +183,7 @@
    "id": "dabf5f01d8e6a670"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-15T14:42:54.155238Z",
-     "start_time": "2025-07-15T14:42:54.145043Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Load datasets\n",
@@ -195,19 +210,8 @@
     "print(\"hello1\")  # print hello 1 as a sanity check"
    ],
    "id": "598b33092ab85352",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 0 rows from dataset CSV\n",
-      "Before deduplication: 0 total cases\n",
-      "0 duplicates removed (now 0 unique PMIDs)\n",
-      "hello1\n"
-     ]
-    }
-   ],
-   "execution_count": 17
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
