--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -25,8 +25,8 @@
    "id": "98ccd760-19a5-48d0-b2c4-64063ecf29e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T14:59:13.300638Z",
-     "start_time": "2025-07-15T14:59:13.139109Z"
+     "end_time": "2025-07-17T11:49:44.351073Z",
+     "start_time": "2025-07-17T11:48:49.929465Z"
     }
    },
    "source": [
@@ -84,31 +84,43 @@
     "os.makedirs(validated_jsons_directory, exist_ok=True)\n",
     "os.makedirs(os.path.dirname(evaluation_report_output_path), exist_ok=True)\n",
     "\n",
+    "# Create the PMIDs pickle file path\n",
+    "pmid_pkl_path = os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"pmids.pkl\")\n",
     "\n",
-    "# 1. Clone the \"phenopacket-store\" GitHub repo into scripts/data/tmp/phenopacket_store\n",
+    "# Before the git pull operation\n",
+    "import shutil\n",
+    "\n",
+    "# Clean up existing directory if it exists\n",
+    "target_dir = os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"notebooks\")\n",
+    "if os.path.exists(target_dir):\n",
+    "    shutil.rmtree(target_dir)\n",
+    "\n",
+    "# 1. Now run the git pull to clone the \"phenopacket-store\" GitHub repo into scripts/data/tmp/phenopacket_store\n",
     "subprocess.run([\n",
     "    sys.executable, \"-m\", \"P5.scripts.pull_git_files\",\n",
     "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\"),\n",
-    "    \"https://github.com/monarch-initiative/phenopacket-store\",\n",
-    "    \"notebooks\",\n",
-    "    \"--depth\", \"1\",\n",
+    "    \"https://github.com/monarch-initiative/phenopacket-store.git\",\n",
+    "    \"notebooks\"\n",
     "], check=True)\n",
+    "\n",
+    "print(\"Stage 1 Complete, Produced %s\" % ground_truth_notebooks_directory)\n",
     "\n",
     "# 2. Scan the just-pulled notebooks for PMID_##### files\n",
     "subprocess.run([\n",
     "    sys.executable, \"-m\", \"P5.scripts.create_pmid_pkl\",\n",
     "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"notebooks\"),\n",
-    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmids.pkl\"),\n",
-    "    \"--recursive\",\n",
+    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"pmids.pkl\"),\n",
+    "    \"--recursive_dir_search\",\n",
     "], check=True)\n",
+    "\n",
+    "print(\"Stage 2 Complete\")\n",
     "\n",
     "# 3. Download *all* PDFs for those PMIDs (0 = unlimited)\n",
     "subprocess.run([\n",
-    "    sys.executable, \"-m\", \"P5.scripts.pmid_downloader\",\n",
-    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmids.pkl\"),\n",
-    "    os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"phenopacket_store\", \"pmid_pdfs\"),\n",
-    "    \"0\",\n",
+    "    sys.executable, \"-m\", \"P5.scripts.pmid_downloader\", pmid_pkl_path, pdf_input_directory, \"10\"\n",
     "], check=True)\n",
+    "\n",
+    "print(\"Stage 3 Complete\")\n",
     "\n",
     "# 4. Finally, build THE CSV mapping PDFs to the ground-truth JSONs\n",
     "if not os.path.isfile(dataset_csv_path):\n",
@@ -120,6 +132,8 @@
     "        \"--recursive_ground_truth_dir\", \"True\"\n",
     "    ], check=True)\n",
     "    print(f\"Created dataset CSV at {dataset_csv_path}\")\n",
+    "\n",
+    "    print(\"Stage 4 Complete\")\n",
     "\n",
     "    if not os.path.isdir(pdf_input_directory):\n",
     "        raise FileNotFoundError(\"PDF input directory not found: %s\" % pdf_input_directory)\n",
@@ -143,34 +157,164 @@
       "Project Start:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5\n",
       "Source Folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src\n",
       "Utilities Folder:    /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils\n",
-      "PYTHONPATH patched with: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils\n"
+      "PYTHONPATH patched with: /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/notebooks/utils\n",
+      "Stage 1 Complete, Produced /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
+      "1234 PMIDs found within /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
+      "Stage 2 Complete\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Usage: python -m P5.scripts.pull_git_files [OPTIONS] OUT_DIR REPO\n",
-      "                                           FILES_TO_COPY_DIR\n",
-      "Try 'python -m P5.scripts.pull_git_files --help' for help.\n",
-      "\n",
-      "Error: No such option: --depth\n"
+      "Processing PMID_25786455:   0%|                         | 0/10 [00:00<?, ?it/s]"
      ]
     },
     {
-     "ename": "CalledProcessError",
-     "evalue": "Command '['/Users/varenya/miniconda3/envs/p5/bin/python', '-m', 'P5.scripts.pull_git_files', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store', 'https://github.com/monarch-initiative/phenopacket-store', 'notebooks', '--depth', '1']' returned non-zero exit status 2.",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mCalledProcessError\u001B[39m                        Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[19]\u001B[39m\u001B[32m, line 57\u001B[39m\n\u001B[32m     53\u001B[39m os.makedirs(os.path.dirname(evaluation_report_output_path), exist_ok=\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[32m     56\u001B[39m \u001B[38;5;66;03m# 1. Clone the \"phenopacket-store\" GitHub repo into scripts/data/tmp/phenopacket_store\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m57\u001B[39m \u001B[43msubprocess\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrun\u001B[49m\u001B[43m(\u001B[49m\u001B[43m[\u001B[49m\n\u001B[32m     58\u001B[39m \u001B[43m    \u001B[49m\u001B[43msys\u001B[49m\u001B[43m.\u001B[49m\u001B[43mexecutable\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43m-m\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mP5.scripts.pull_git_files\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     59\u001B[39m \u001B[43m    \u001B[49m\u001B[43mos\u001B[49m\u001B[43m.\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m.\u001B[49m\u001B[43mjoin\u001B[49m\u001B[43m(\u001B[49m\u001B[43msrc_folder\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mP5\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mscripts\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mdata\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mtmp\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mphenopacket_store\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     60\u001B[39m \u001B[43m    \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mhttps://github.com/monarch-initiative/phenopacket-store\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     61\u001B[39m \u001B[43m    \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mnotebooks\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     62\u001B[39m \u001B[43m    \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43m--depth\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43m1\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     63\u001B[39m \u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcheck\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n\u001B[32m     65\u001B[39m \u001B[38;5;66;03m# 2. Scan the just-pulled notebooks for PMID_##### files\u001B[39;00m\n\u001B[32m     66\u001B[39m subprocess.run([\n\u001B[32m     67\u001B[39m     sys.executable, \u001B[33m\"\u001B[39m\u001B[33m-m\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mP5.scripts.create_pmid_pkl\u001B[39m\u001B[33m\"\u001B[39m,\n\u001B[32m     68\u001B[39m     os.path.join(src_folder, \u001B[33m\"\u001B[39m\u001B[33mP5\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mscripts\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mdata\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mtmp\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mphenopacket_store\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mnotebooks\u001B[39m\u001B[33m\"\u001B[39m),\n\u001B[32m     69\u001B[39m     os.path.join(src_folder, \u001B[33m\"\u001B[39m\u001B[33mP5\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mscripts\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mdata\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mtmp\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mphenopacket_store\u001B[39m\u001B[33m\"\u001B[39m, \u001B[33m\"\u001B[39m\u001B[33mpmids.pkl\u001B[39m\u001B[33m\"\u001B[39m),\n\u001B[32m     70\u001B[39m     \u001B[33m\"\u001B[39m\u001B[33m--recursive\u001B[39m\u001B[33m\"\u001B[39m,\n\u001B[32m     71\u001B[39m ], check=\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/miniconda3/envs/p5/lib/python3.13/subprocess.py:577\u001B[39m, in \u001B[36mrun\u001B[39m\u001B[34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001B[39m\n\u001B[32m    575\u001B[39m     retcode = process.poll()\n\u001B[32m    576\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m check \u001B[38;5;129;01mand\u001B[39;00m retcode:\n\u001B[32m--> \u001B[39m\u001B[32m577\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m CalledProcessError(retcode, process.args,\n\u001B[32m    578\u001B[39m                                  output=stdout, stderr=stderr)\n\u001B[32m    579\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m CompletedProcess(process.args, retcode, stdout, stderr)\n",
-      "\u001B[31mCalledProcessError\u001B[39m: Command '['/Users/varenya/miniconda3/envs/p5/bin/python', '-m', 'P5.scripts.pull_git_files', '/Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store', 'https://github.com/monarch-initiative/phenopacket-store', 'notebooks', '--depth', '1']' returned non-zero exit status 2."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No PMCID found for PMID_25786455.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing PMID_33350388:  10%|█▋               | 1/10 [00:00<00:05,  1.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A PDF for PMID_33350388 was successfully downloaded. PMCID=7755391.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing PMID_16027248:  20%|███▍             | 2/10 [00:15<01:13,  9.15s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No PMCID found for PMID_16027248.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing PMID_37761890:  30%|█████            | 3/10 [00:16<00:36,  5.17s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A PDF for PMID_37761890 was successfully downloaded. PMCID=10531206.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing PMID_37850357:  40%|██████▊          | 4/10 [00:22<00:33,  5.52s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No PMCID found for PMID_37850357.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing PMID_28148688:  50%|████████▌        | 5/10 [00:22<00:18,  3.68s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A PDF for PMID_28148688 was successfully downloaded. PMCID=5339678.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing PMID_30762603:  60%|██████████▏      | 6/10 [00:29<00:19,  4.81s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No PMCID found for PMID_30762603.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing PMID_38527963:  70%|███████████▉     | 7/10 [00:30<00:10,  3.37s/it]An error occurred when downloading PMID_38527963 = PMC_11224604: No connection adapters were found for 'data:,'\n",
+      "Processing PMID_16909392:  80%|█████████████▌   | 8/10 [00:36<00:08,  4.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A PDF for PMID_16909392 was successfully downloaded. PMCID=1559552.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing PMID_36247900:  90%|███████████████▎ | 9/10 [00:42<00:04,  4.91s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A PDF for PMID_36247900 was successfully downloaded. PMCID=9547136.\n",
+      "Stage 3 Complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing of 10 PMIDs complete. 5 PDFs successfully downloaded.: 100%|█| 10/10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created dataset CSV at /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\n",
+      "Stage 4 Complete\n",
+      "PDF inputs folder:       /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/pmid_pdfs\n",
+      "Ground truth folder:     /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
+      "Dataset CSV path:        /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\n",
+      "LLM outputs folder:      /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/llm_output_dir\n",
+      "Validated JSONs folder:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/validated_jsons\n",
+      "Evaluation report path:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/reports/first_report.json\n",
+      "hello0\n"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 37
   },
   {
    "metadata": {},
