--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -87,6 +87,7 @@
     "# Create the PMIDs pickle file path\n",
     "pmid_pkl_path = os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"pmids.pkl\")\n",
     "\n",
+    "# TODO: Figure out why deleting the `ground_truth_notebooks_directory` after creating it works\n",
     "# Before the git pull operation\n",
     "import shutil\n",
     "\n",
@@ -390,7 +391,7 @@
     "    print(\"Initialized empty phenopacket cache\")\n",
     "\n",
     "# Lookup parsed PDFs - by MD5 hash?\n",
-    "# TODO: check aboud SHA-256 or SHA-512\n",
+    "# TODO: figure out how to use SHA-256 or SHA-512\n",
     "existing_hashes = {info[\"hash\"] for info in phenopacket_cache.values()}\n",
     "\n",
     "# Prepare to record skipped cases due to failures, as well as the reasons why\n",
