--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "# Create any missing output folders\n",
     "os.makedirs(pdf_input_directory, exist_ok=True)\n",
-    "os.makedirs(ground_truth_notebooks_directory, exist_ok=True)\n",
+    "# os.makedirs(ground_truth_notebooks_directory, exist_ok=True)\n",
     "os.makedirs(os.path.dirname(dataset_csv_path), exist_ok=True)\n",
     "os.makedirs(llm_output_directory, exist_ok=True)\n",
     "os.makedirs(validated_jsons_directory, exist_ok=True)\n",
@@ -87,7 +87,7 @@
     "# Create the PMIDs pickle file path\n",
     "pmid_pkl_path = os.path.join(src_folder, \"P5\", \"scripts\", \"data\", \"tmp\", \"pmids.pkl\")\n",
     "\n",
-    "# TODO: Figure out why deleting the `ground_truth_notebooks_directory` after creating it works\n",
+    "# TODO: Figure out why deleting the `ground_truth_notebooks_directory` after creating it works. Maybe because git doesn't let me just overwrite a directory with a clone request\n",
     "# Before the git pull operation\n",
     "import shutil\n",
     "\n",
